Fix tooltips not showing during gameplay

--- a/escape-api/assets/stylesheets/map.css
+++ b/escape-api/assets/stylesheets/map.css
@@ -96,7 +96,7 @@
 }
 
 
-#spaceHoverTooltip {
+.spaceHoverTooltip {
     display: none;
     position: absolute;
     background-color: black;
